// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule tel-non-breaking should contain contextual documentation 1`] = `
Object {
  "description": "The \` \` character should be replaced with \`&nbsp;\` character (non-breaking space) when used in a telephone number.

Unless non-breaking characters is used there could be a line break inserted at that character.
Line breaks make is harder to read and understand the telephone number.

The following characters should be avoided:

  - \` \` - replace with \`&nbsp;\` (non-breaking space).
  - \`-\` - replace with \`&#8209;\` (non-breaking hyphen).",
  "url": "https://html-validate.org/rules/tel-non-breaking.html",
}
`;

exports[`rule tel-non-breaking should contain documentation 1`] = `
Object {
  "description": "Replace this character with a non-breaking version.

Unless non-breaking characters is used there could be a line break inserted at that character.
Line breaks make is harder to read and understand the telephone number.

The following characters should be avoided:

  - \` \` - replace with \`&nbsp;\` (non-breaking space).
  - \`-\` - replace with \`&#8209;\` (non-breaking hyphen).",
  "url": "https://html-validate.org/rules/tel-non-breaking.html",
}
`;

exports[`rule tel-non-breaking should report proper location and selector 1`] = `
"<red>error</>: <bold>\\"-\\" should be replaced with \\"&#8209;\\" in telephone number</> <dim>(tel-non-breaking)</> at <green>inline:5:17</>:
  3 | 				<header>
  4 | 					<a href=\\"tel:\\">
> 5 | 						<span> foo-bar </span>
    | 						          ^
  6 | 					</a>
  7 | 				</header>
  8 | 			</body>

"
`;
